--- a/templates/home.html
+++ b/templates/home.html
@@ -55,6 +55,19 @@
         {% endfor %}
     </div>
 
+    <!-- Pagination -->
+    <div style="text-align:center; margin-top:20px;">
+        {% if page > 1 %}
+            <a href="{{ url_for('clothing', page=page-1) }}">Previous</a>
+        {% endif %}
+
+        Page {{ page }} of {{ total_pages }}
+
+        {% if page < total_pages %}
+            <a href="{{ url_for('clothing', page=page+1) }}">Next</a>
+        {% endif %}
+    </div>
+
     <div class="modal" id="modal">
         <span class="close" id="close">&times;</span>
         <div class="modal-content">
@@ -95,4 +108,4 @@
         }
     </script>
 </body>
-</html>
+</html
